# Cargo.toml

[package]
name = "command_timeout"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tokio friendly command exec with smart timeout"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2" # Add libc

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }