# Cargo.toml

[package]
name = "command_timeout"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A tokio friendly command exec with smart timeout"
repository = "https://github.com/cfsmp3/exec_timeout_rs"
keywords = ["command", "process", "timeout", "async", "tokio"]
categories = ["command-line-utilities", "asynchronous"]

[dependencies]
# Core library dependencies
tokio = { version = "1", features = ["full"] } # "full" enables rt, time, process, io-util etc.
tracing = "0.1"
thiserror = "1.0"
nix = { version = "0.29", features = ["signal", "process"] } # For killpg
libc = "0.2" # For setpgid and signal constants

# Dependencies also used by the example(s)
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } # For logging setup
tempfile = "3" # For creating temporary directories in examples/tests
anyhow = "1.0" # For simple error handling in examples

# Dependency on the library itself (needed for building examples within the workspace)
# This line might not be strictly necessary if cargo automatically detects it,
# but explicitly listing it can sometimes help.
# command_timeout = { path = "." } # Uncomment if examples fail to find the library


[dev-dependencies]
# Dependencies only needed for running tests (`cargo test`)
# Tracing subscriber is already in [dependencies] for the example,
# but if you had no examples needing it, it would go here.


# Declare the example binary target
[[example]]
name = "git_clone_kernel"
path = "examples/git_clone_kernel.rs"
# Example requires tokio runtime features if not enabled globally in [dependencies]
# required-features = ["full"] # Uncomment if tokio features are restricted in [dependencies]